tests/ui/impl-trait/issues/issue-54600.stderr
error[E0562]: `impl Trait` only allowed in function and inherent method return types, not in variable bindings
  --> $DIR/issue-54600.rs:4:19
   |
LL |     let x: Option<impl Debug> = Some(44_u32);
   |                   ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
